# signetpdf

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
.beads/: interactions.jsonl  issues.jsonl
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ui-redesign.md
e2e/: annotations-keyboard.spec.ts  harness.html  ink.spec.ts  markup.spec.ts  notes.spec.ts  search.spec.ts  shapes.spec.ts  signatures.spec.ts  unsaved.spec.ts
fixtures/: README.md
scripts/: make-fixtures.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pdf_io.rs
src/annotations/: drag.ts  ink.test.ts  ink.ts  inkOverlay.dom.test.ts  inkOverlay.ts  markup.test.ts  markup.ts  markupOverlay.dom.test.ts  markupOverlay.ts  move.test.ts  move.ts  note.test.ts  note.ts  noteOverlay.ts  overlay.dom.test.ts  overlay.test.ts  overlay.ts  shape.test.ts  shape.ts  shapeOverlay.ts  snap.test.ts  snap.ts  toolbar.dom.test.ts  toolbar.ts  transform.test.ts  transform.ts
src/app/: contextmenu.dom.test.ts  contextmenu.test.ts  contextmenu.ts  dock.dom.test.ts  dock.ts  icons.dom.test.ts  icons.test.ts  icons.ts  roving.test.ts  roving.ts  shortcuts.test.ts  shortcuts.ts  toast.dom.test.ts  toast.ts
src/model/: id.ts  (+7 more)
(+37 files in other folders)
